feat(商城): Springboot2.7整合seata实现分布式事务管理