@@ -4,7 +4,6 @@ import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.core.toolkit.CollectionUtils;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import jakarta.servlet.http.HttpServletRequest;
 import ltd.newbee.mall.constant.Constants;
 import ltd.newbee.mall.controller.base.BaseController;
 import ltd.newbee.mall.core.entity.GoodsCategory;
@@ -14,10 +13,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
 
+import javax.servlet.http.HttpServletRequest;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
+import static java.util.stream.Collectors.toList;
 
 @Controller
 @RequestMapping("admin/categories")
@@ -119,11 +121,11 @@ public class GoodsCateManagerController extends BaseController {
         for (Long id : ids) {
             List<GoodsCategory> goodsCategories = goodsCategoryService.list(new QueryWrapper<GoodsCategory>().select("category_id").eq("parent_id", id));
             if (CollectionUtils.isNotEmpty(goodsCategories)) {
-                List<Long> collect = goodsCategories.stream().map(GoodsCategory::getCategoryId).toList();
+                List<Long> collect = goodsCategories.stream().map(GoodsCategory::getCategoryId).collect(toList());
                 list.addAll(collect);
                 for (Long aLong : collect) {
                     List<GoodsCategory> list2 = goodsCategoryService.list(new QueryWrapper<GoodsCategory>().select("category_id").eq("parent_id", aLong));
-                    List<Long> collect1 = list2.stream().map(GoodsCategory::getCategoryId).toList();
+                    List<Long> collect1 = list2.stream().map(GoodsCategory::getCategoryId).collect(toList());
                     list.addAll(collect1);
                 }
             }
